objects/Imp_User_Issue_and_CR_Tracking__c.object
<CustomObject>
    <description>This module is to support the ability for the users of the CDK Project Management application to escalate issues and requested change requests for the application.</description>
    <fields>
        <fullName>Acceptance_Criteria__c</fullName>
        <description>This field will be required and will need to include how the user will know the change or fix is implemented</description>
        <inlineHelpText>Please enter specific criteria on how you will verify that the Issue or CR has been implemented.  This may occur in a sandbox environment prior to push to production or directly in production depending on the item</inlineHelpText>
        <label>Acceptance Criteria</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Canceled_Reason__c</fullName>
        <description>Field to indicate why the request was canceled</description>
        <inlineHelpText>Please select the appropriate value when setting status to canceled.</inlineHelpText>
        <label>Canceled Reason</label>
        <picklist>
            <picklistValues>
                <fullName>Business process issue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Duplicate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Obsolete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Requestor initiated cancellation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Training issue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Working as designed</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Complete_Date__c</fullName>
        <description>Field to indicate the date complete</description>
        <inlineHelpText>This field will autofill with the complete date based on the status being changed to Complete or Canceled</inlineHelpText>
        <label>Complete Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Description_of_Issue_or_CR__c</fullName>
        <description>This field describes the issue or change request being submitted by the user</description>
        <inlineHelpText>Please describe the issue or change request being submitted to the development team</inlineHelpText>
        <label>Description of Issue or CR</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Development_Notes_Resolution__c</fullName>
        <description>This field is updated by the Product Owner, Analyst, and/or Developer once the item is resolved or reviewed to provide updates.</description>
        <inlineHelpText>This section is for the Product Owner, Analyst, and/or Developer to update the record with notes and any information on resolution if appropriate.</inlineHelpText>
        <label>Development Notes/Resolution</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <description>Field to indicate the priority for the record.  It will default to Normal</description>
        <inlineHelpText>Please select your priority for the item.  The priority may be updated by the development team once received if appropriate.</inlineHelpText>
        <label>Priority</label>
        <picklist>
            <picklistValues>
                <fullName>Critical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Normal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Product_Enhancement__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field used to indicate that this is an enhancement/change request to the product</description>
        <inlineHelpText>Check this box to indicate that this has been determined to be an enhancement and will be added as a user story.</inlineHelpText>
        <label>Product Enhancement</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Requestor_Email_Address__c</fullName>
        <defaultValue>$User.Email</defaultValue>
        <description>The email address of the current user by default.  Can be changed to another email address if appropriate</description>
        <inlineHelpText>Enter the email address where you want to receive notifications</inlineHelpText>
        <label>Requestor Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Requestor__c</fullName>
        <defaultValue>$User.FirstName &amp; &quot; &quot; &amp;  $User.LastName</defaultValue>
        <description>This field is the person who is submitted the record</description>
        <inlineHelpText>This field will default to the current user.  If you need to change simple update to a different name.</inlineHelpText>
        <label>Requestor</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Field to designate the status of the request</description>
        <inlineHelpText>enter the appropriate status.  It will default to Submitted</inlineHelpText>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Submitted</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Assigned</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ready for Acceptance Test</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On Hold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canceled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complete</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Submitted_Date__c</fullName>
        <defaultValue>Today()</defaultValue>
        <description>The date that the user submitted the request to the queue</description>
        <inlineHelpText>This date is the date the request was submitted.  Will default to the current date on create and update if not set to &quot;submitted&quot; until a future date.</inlineHelpText>
        <label>Submitted Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>Field to indicate the type of issue or request</description>
        <inlineHelpText>Select the item that describes the issue or request</inlineHelpText>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>General - Question</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Issue - Blocking</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Issue - Data missing or wrong</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Issue - Error message received on page</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Issue - Workflow not working as expected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Request - Change to Pick-list</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Request - New Email Template</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Request - New field</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Request - New Public View</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Request - New Report or Dashboard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Request - New workflow</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Request - PSR</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Imp User Issue and CR Tracking</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Description_of_Issue_or_CR__c</columns>
        <columns>Complete_Date__c</columns>
        <columns>Priority__c</columns>
        <columns>Requestor__c</columns>
        <columns>Status__c</columns>
        <columns>Submitted_Date__c</columns>
        <columns>Type__c</columns>
        <columns>Development_Notes_Resolution__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Imp_Issue_CR_Support_Imp_User_Issue_and_CR_Tracking</fullName>
        <columns>NAME</columns>
        <columns>Requestor__c</columns>
        <columns>Priority__c</columns>
        <columns>Status__c</columns>
        <columns>Submitted_Date__c</columns>
        <columns>Description_of_Issue_or_CR__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Queue</filterScope>
        <label>ICRT Queue</label>
        <language>en_US</language>
        <queue>Imp_Issue_CR_Support</queue>
        <sharedTo>
            <group>Imp_User_Support</group>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>ICRT-{000000}</displayFormat>
        <label>Tracking Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Imp User Issue and CR Tracking</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>